--- a/src/Perfil_tatuador.html
+++ b/src/Perfil_tatuador.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seu perfil de tatuador</title>
+    <link rel="stylesheet" href="public/css/perfil_tatuador.css">
 </head>
 <body>
 
-    <header>
-        <div>
-            <img src="#" alt="Imagem de perfil do tatuador">
-        </div>
-        <section>
-            <h2>Username</h2>
-            <p>Descrição: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, totam nisi. Rerum eum distinctio hic tempora architecto? Minus consequuntur natus quo, dignissimos laboriosam veniam inventore recusandae, distinctio est tempore facere.</p>
+    <header id="header-container">
+        <section id="info-container">
+            <div id="img-container">
+                <img src="public/images/img-profile.jpg" alt="Imagem de perfil do tatuador">
+            </div>
+            <h2 id="username">Username</h2>
+            <button type="button" id="settings"><img id="edit-icon" src="public/images/edit.png"></button>
+            <p> Minus consequuntur natus quo, dignissimos laboriosam veniam inventore recusandae, distinctio est tempore facere.</p>
         </section>
-        <button type="button">Editar perfil</button>
 
         <hr>
 
-        <table>
+        <table id="rating-container">
             <thead>
                 <tr>
                     <td>Nota</td>
@@ -43,10 +44,8 @@
     <section>
 
         <div>
-            <ul>
-                <a href="#"><li>Meu catálogo</li></a>
-                <a href="#"><li>Mais vendidas</li></a>
-            </ul>
+            <button>Meu catálogo</button>
+            <button>Mais vendidas</button>
         </div>
 
         <hr>
@@ -81,6 +80,7 @@
         </ul>
     </nav>
 
-
+    
 </body>
+
 </html>
