--- a/src/Index.html
+++ b/src/Index.html
@@ -9,62 +9,65 @@
 </head>
 <body>
     <header>
-        <img src="public/images/Logo PSW sem texto.png" alt="Logotipo do Tatuando" id="logo">
-        <h1>Tatuando</h1>
+        <a id="logo" href="Index.html"><img src="public/images/Logo PSW.svg" alt="Logotipo do Tatuando" id="logo"></a>
     </header>
 
     <section>
-        <div>
+        <div id="search-container">
+            <button alt="pesquisar"></button>
             <input type="search" placeholder="Encontre o que procura">
-            <button>Procurar</button>
         </div>
-
-        <hr>
-
-        <div>
+        <div id="profile-settings">
             <button>Seguindo</button>
             <button>Para você</button>
         </div>
+        <div id="feed-container">
 
-        <hr>
-
-        <article class="cards">
-            <img src="#" alt="Imagem da tatuagem"> 
-            <h6>Nome da tatuagem e descrição</h6>
-            <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-            <p>R$ 100,00</p>
-            <button>Salvar</button>
-        </article>
-        <article class="cards">
-            <img src="#" alt="Imagem da tatuagem"> 
-            <h6>Nome da tatuagem e descrição</h6>
-            <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-            <p>R$ 100,00</p>
-            <button>Salvar</button>
-        </article>
-        <article class="cards">
-            <img src="#" alt="Imagem da tatuagem"> 
-            <h6>Nome da tatuagem e descrição</h6>
-            <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-            <p>R$ 100,00</p>
-            <button>Salvar</button>
-        </article>
-        <article class="cards">
-            <img src="#" alt="Imagem da tatuagem"> 
-            <h6>Nome da tatuagem e descrição</h6>
-            <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-            <p>R$ 100,00</p>
-            <button>Salvar</button>
-        </article>
-        <article class="cards">
-            <img src="#" alt="Imagem da tatuagem"> 
-            <h6>Nome da tatuagem e descrição</h6>
-            <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-            <p>R$ 100,00</p>
-            <button>Salvar</button>
-        </article>
-    </section>
-
+            <article class="cards">
+                <img src="./public//images/exemplo1.jpg" alt="Imagem da tatuagem"> 
+                <h6>Nome da tatuagem e descrição</h6>
+                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                
+                <p>R$ 100,00</p>
+                <button>Salvar</button>
+            </article>
+            <article class="cards">
+                <img src="./public/images/exemplo2.jpg" alt="Imagem da tatuagem"> 
+                <h6>Nome da tatuagem e descrição</h6>
+                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                <p>R$ 100,00</p>
+                <button>Salvar</button>
+            </article>
+            <article class="cards">
+                <img src="./public/images/exemplo3.jpg" alt="Imagem da tatuagem"> 
+                <h6>Nome da tatuagem e descrição</h6>
+                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                <p>R$ 100,00</p>
+                <button>Salvar</button>
+            </article>
+            <article class="cards">
+                <img src="./public/images/exemplo4.jpg" alt="Imagem da tatuagem"> 
+                <h6>Nome da tatuagem e descrição</h6>
+                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                <p>R$ 100,00</p>
+                <button>Salvar</button>
+            </article>
+            <article class="cards">
+                <img src="./public/images/exemplo5.jpg" alt="Imagem da tatuagem"> 
+                <h6>Nome da tatuagem e descrição</h6>
+                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                <p>R$ 100,00</p>
+                <button>Salvar</button>
+            </article>
+            <article class="cards">
+                <img src="./public/images/exemplo6.jpg" alt="Imagem da tatuagem"> 
+                <h6>Nome da tatuagem e descrição</h6>
+                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                <p>R$ 100,00</p>
+                <button>Salvar</button>
+            </article>
+        </div>
+    </section>    
     <nav>
         <ul id="ul">
             <a href="#" class="nav-link"><li>Meu perfil</li></a>
