Added some id's and classes

--- a/src/Perfil_tatuador.html
+++ b/src/Perfil_tatuador.html
@@ -19,8 +19,6 @@
             <p> Minus consequuntur natus quo, dignissimos laboriosam veniam inventore recusandae, distinctio est tempore facere.</p>
         </section>
 
-        <hr>
-
         <table id="rating-container">
             <thead>
                 <tr>
@@ -39,44 +37,39 @@
         </table>
     </header>
 
-    <hr>
+    <section id="cards-container">
 
-    <section>
-
-        <div>
+        <div id="post-options">
             <button>Meu catálogo</button>
             <button>Mais vendidas</button>
         </div>
 
-        <hr>
 
-        <article style="border: 1px solid black; display: inline-block; padding: 0.5rem">
-            <img src="#" alt="Imagem da tatuagem 1">
-            <h6>Nome da tatuagem 1 e sua descrição</h6>
+        <article class="article-cards">
+            <img src="public/images/tattoo exemplo.jpg" alt="Imagem da tatuagem 1">
+            <h4>Nome da tatuagem 1 e sua descrição</h4>
             <p>R$ 100,00</p>
-            <button type="button">Editar</button>
+            <button type="button"><img src="public/images/pen.png"></button>
         </article>
-        <article style="border: 1px solid black; display: inline-block; padding: 0.5rem">
-            <img src="#" alt="Imagem da tatuagem 2">
-            <h6>Nome da tatuagem 2 e sua descrição</h6>
+        <article class="article-cards">
+            <img src="public/images/tattoo exemplo.jpg" alt="Imagem da tatuagem 2">
+            <h4>Nome da tatuagem 2 e sua descrição</h4>
             <p>R$ 100,00</p>
-            <button type="button">Editar</button>
+            <button type="button"><img src="public/images/pen.png"></button>
         </article>
-        <article style="border: 1px solid black; display: inline-block; padding: 0.5rem">
-            <img src="#" alt="Imagem da tatuagem 3">
-            <h6>Nome da tatuagem 3 e sua descrição</h6>
+        <article class="article-cards">
+            <img src="public/images/tattoo exemplo.jpg" alt="Imagem da tatuagem 3">
+            <h4>Nome da tatuagem 3 e sua descrição</h4>
             <p>R$ 100,00</p>
-            <button type="button">Editar</button>
+            <button type="button"><img src="public/images/pen.png"></button>
         </article>
     </section>
 
-    <hr>
-
-    <nav>
+    <nav id="nav-container">
         <ul>
-            <a href="#"><li>Home</li></a>
-            <a href="Cadastro_tatuagem.html"><li>Nova tatuagem</li></a>
-            <a href="#"><li>Solicitação de clientes</li></a>
+            <a href="#"><img src="public/images/home.png"></a>
+            <a href="Cadastro_tatuagem.html"><img src="public/images/home.png"></a>
+            <a href="#"><img src="public/images/home.png"></a>
         </ul>
     </nav>
 
