--- a/src/Index.html
+++ b/src/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descubra seu gosto</title>
     <link rel="stylesheet" href="public/css/index.css">
+    <link rel="icon" type="imagem/png" href="./public/images/Logo PSW sem texto.svg"/>
 </head>
 <body>
     <header>
@@ -14,7 +15,6 @@
 
     <section>
         <div id="search-container">
-            <button alt="pesquisar"></button>
             <input type="search" placeholder="Encontre o que procura">
         </div>
         <div id="profile-settings">
@@ -24,47 +24,58 @@
         <div id="feed-container">
 
             <article class="cards">
-                <img src="./public//images/exemplo1.jpg" alt="Imagem da tatuagem"> 
-                <h6>Nome da tatuagem e descrição</h6>
-                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-                
-                <p>R$ 100,00</p>
-                <button>Salvar</button>
+                <img src="./public//images/exemplo1.jpg" alt="Imagem da tatuagem">
+                <div>
+                    <h6>Nome da tatuagem e descrição</h6>
+                    <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                    <p>R$ 100,00</p>
+                    <button>Salvar</button>
+                </div> 
             </article>
             <article class="cards">
                 <img src="./public/images/exemplo2.jpg" alt="Imagem da tatuagem"> 
-                <h6>Nome da tatuagem e descrição</h6>
-                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-                <p>R$ 100,00</p>
-                <button>Salvar</button>
+                <div>
+                    <h6>Nome da tatuagem e descrição</h6>
+                    <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                    <p>R$ 100,00</p>
+                    <button>Salvar</button>
+                </div>
             </article>
             <article class="cards">
-                <img src="./public/images/exemplo3.jpg" alt="Imagem da tatuagem"> 
-                <h6>Nome da tatuagem e descrição</h6>
-                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-                <p>R$ 100,00</p>
-                <button>Salvar</button>
+                <img src="./public/images/exemplo3.jpg" alt="Imagem da tatuagem">
+                <div>
+                    <h6>Nome da tatuagem e descrição</h6>
+                    <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                    <p>R$ 100,00</p>
+                    <button>Salvar</button>
+                </div>
             </article>
             <article class="cards">
                 <img src="./public/images/exemplo4.jpg" alt="Imagem da tatuagem"> 
-                <h6>Nome da tatuagem e descrição</h6>
-                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-                <p>R$ 100,00</p>
-                <button>Salvar</button>
+                <div>
+                    <h6>Nome da tatuagem e descrição</h6>
+                    <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                    <p>R$ 100,00</p>
+                    <button>Salvar</button>
+                </div>
             </article>
             <article class="cards">
                 <img src="./public/images/exemplo5.jpg" alt="Imagem da tatuagem"> 
-                <h6>Nome da tatuagem e descrição</h6>
-                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-                <p>R$ 100,00</p>
-                <button>Salvar</button>
+                <div>
+                    <h6>Nome da tatuagem e descrição</h6>
+                    <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                    <p>R$ 100,00</p>
+                    <button>Salvar</button>
+                </div>
             </article>
             <article class="cards">
                 <img src="./public/images/exemplo6.jpg" alt="Imagem da tatuagem"> 
-                <h6>Nome da tatuagem e descrição</h6>
-                <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
-                <p>R$ 100,00</p>
-                <button>Salvar</button>
+                <div>
+                    <h6>Nome da tatuagem e descrição</h6>
+                    <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
+                    <p>R$ 100,00</p>
+                    <button>Salvar</button>
+                </div>
             </article>
         </div>
     </section>    
