Changed some tags

--- a/src/Perfil_tatuador.html
+++ b/src/Perfil_tatuador.html
@@ -15,26 +15,18 @@
                 <img src="public/images/img-profile.jpg" alt="Imagem de perfil do tatuador">
             </div>
             <h2 id="username">Username</h2>
-            <button type="button" id="settings"><img id="edit-icon" src="public/images/edit.png"></button>
+            <button type="button" id="settings"><img id="edit-icon" src="public/images/edit.svg"></button>
             <p> Minus consequuntur natus quo, dignissimos laboriosam veniam inventore recusandae, distinctio est tempore facere.</p>
         </section>
 
-        <table id="rating-container">
-            <thead>
-                <tr>
-                    <td>Nota</td>
-                    <td>Fãs</td>
-                    <td>Seguindo</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>4.9</td>
-                    <td>965</td>
-                    <td>320</td>
-                </tr>
-            </tbody>
-        </table>
+        <div id="rating-container">
+                <h3>Nota</h3>
+                <h3>Fãs</h3>
+                <h3>Seguindo</h3>
+                <p>4.9</p>
+                <p>818</p>
+                <p>320</p>
+        </div>
     </header>
 
     <section id="cards-container">
@@ -49,27 +41,33 @@
             <img src="public/images/tattoo exemplo.jpg" alt="Imagem da tatuagem 1">
             <h4>Nome da tatuagem 1 e sua descrição</h4>
             <p>R$ 100,00</p>
-            <button type="button"><img src="public/images/pen.png"></button>
+            <button type="button"><img src="public/images/pen.svg"></button>
         </article>
         <article class="article-cards">
             <img src="public/images/tattoo exemplo.jpg" alt="Imagem da tatuagem 2">
             <h4>Nome da tatuagem 2 e sua descrição</h4>
             <p>R$ 100,00</p>
-            <button type="button"><img src="public/images/pen.png"></button>
+            <button type="button"><img src="public/images/pen.svg"></button>
         </article>
         <article class="article-cards">
             <img src="public/images/tattoo exemplo.jpg" alt="Imagem da tatuagem 3">
             <h4>Nome da tatuagem 3 e sua descrição</h4>
             <p>R$ 100,00</p>
-            <button type="button"><img src="public/images/pen.png"></button>
+            <button type="button"><img src="public/images/pen.svg"></button>
+        </article>
+        <article class="article-cards">
+            <img src="public/images/tattoo exemplo.jpg" alt="Imagem da tatuagem 3">
+            <h4>Nome da tatuagem 3 e sua descrição</h4>
+            <p>R$ 100,00</p>
+            <button type="button"><img src="public/images/pen.svg"></button>
         </article>
     </section>
 
     <nav id="nav-container">
         <ul>
-            <a href="#"><img src="public/images/home.png"></a>
-            <a href="Cadastro_tatuagem.html"><img src="public/images/home.png"></a>
-            <a href="#"><img src="public/images/home.png"></a>
+            <a href="Index.html"><img src="public/images/home.svg" style="color: white;"></a>
+            <a href="Cadastro_tatuagem.html"><img src="public/images/plus.svg"></a>
+            <a href="#"><img src="public/images/message.svg"></a>
         </ul>
     </nav>
 
