changed colors and responsiveness (tablet) - index

--- a/src/Index.html
+++ b/src/Index.html
@@ -29,7 +29,7 @@
                     <h6>Nome da tatuagem e descrição</h6>
                     <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
                     <p>R$ 100,00</p>
-                    <button>Salvar</button>
+                    <button class="btn-salvar">Salvar</button>
                 </div> 
             </article>
             <article class="cards">
@@ -38,7 +38,7 @@
                     <h6>Nome da tatuagem e descrição</h6>
                     <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
                     <p>R$ 100,00</p>
-                    <button>Salvar</button>
+                    <button class="btn-salvar">Salvar</button>
                 </div>
             </article>
             <article class="cards">
@@ -47,7 +47,7 @@
                     <h6>Nome da tatuagem e descrição</h6>
                     <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
                     <p>R$ 100,00</p>
-                    <button>Salvar</button>
+                    <button class="btn-salvar">Salvar</button>
                 </div>
             </article>
             <article class="cards">
@@ -56,7 +56,7 @@
                     <h6>Nome da tatuagem e descrição</h6>
                     <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
                     <p>R$ 100,00</p>
-                    <button>Salvar</button>
+                    <button class="btn-salvar">Salvar</button>
                 </div>
             </article>
             <article class="cards">
@@ -65,7 +65,7 @@
                     <h6>Nome da tatuagem e descrição</h6>
                     <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
                     <p>R$ 100,00</p>
-                    <button>Salvar</button>
+                    <button class="btn-salvar">Salvar</button>
                 </div>
             </article>
             <article class="cards">
@@ -74,7 +74,7 @@
                     <h6>Nome da tatuagem e descrição</h6>
                     <a href="Perfil_tatuador.html"><p>Username do tatuador</p></a>
                     <p>R$ 100,00</p>
-                    <button>Salvar</button>
+                    <button class="btn-salvar">Salvar</button>
                 </div>
             </article>
         </div>
