added style to cadastro_cliente mobile

--- a/src/Cadastro_cliente.html
+++ b/src/Cadastro_cliente.html
@@ -9,43 +9,45 @@
 </head>
 <body>
 
-    <form action="#" id="form-container">
-        <legend>Seu cadastro</legend>
+    <div class="main-container">
+        <form action="#" id="form-container">
+            <legend>Seu cadastro</legend>
 
-        <label for="name" class="form-content">Seu nome:</label>
-        <input type="text" name="name" class="form-content">
+            <label for="name" class="form-content">Seu nome:</label>
+            <input type="text" name="name" class="form-content">
 
-        <label for="username" class="form-content">Seu nome de usuário:</label>
-        <input type="text" name="username" class="form-content">
+            <label for="username" class="form-content">Seu nome de usuário:</label>
+            <input type="text" name="username" class="form-content">
 
-        <label class="form-content">Email:</label>
-        <input type="email" class="form-content">
+            <label class="form-content">Email:</label>
+            <input type="email" class="form-content">
 
-        <label class="form-content">Senha:</label>
-        <input type="password" class="form-content">
+            <label class="form-content">Senha:</label>
+            <input type="password" class="form-content">
 
-        <label class="form-content">Confirme sua senha:</label>
-        <input type="password" class="form-content">
+            <label class="form-content">Confirme sua senha:</label>
+            <input type="password" class="form-content">
 
 
 
-        <label>Interesses</label>
-        <div>
-            <label>Tribais</label>
-            <input type="checkbox">
-            <label>New school</label>
-            <input type="checkbox">
-            <label>Minimalista</label>
-            <input type="checkbox">
-            <label>Formas geométricas</label>
-            <input type="checkbox">
-            <label>Old school</label>
-            <input type="checkbox">
-            <button>Adicionar outro</button>
-        </div>
+            <label>Interesses</label>
+            <div>
+                <label>Tribais</label>
+                <input type="checkbox">
+                <label>New school</label>
+                <input type="checkbox">
+                <label>Minimalista</label>
+                <input type="checkbox">
+                <label>Formas geométricas</label>
+                <input type="checkbox">
+                <label>Old school</label>
+                <input type="checkbox">
+                <button>Adicionar outro</button>
+            </div>
 
-        <button type="submit" id="submit">Cadastrar-se</button>   
-    </form>
-    
+            <button type="submit" id="submit">Cadastrar-se</button>   
+        </form>
+</div>
+
 </body>
 </html>
