--- a/src/Pagamento.html
+++ b/src/Pagamento.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <main id="main-container">
-            <h1>Finalizar compra</h1>
+            <h1>Forma de pagamento</h1>
             <form id="form-container">
                 <fieldset class="fieldset-container">
                     <legend class="fieldset-legend">Seus dados</legend>
@@ -40,7 +40,7 @@
 
                 <div id="button-container">
                     <button>CANCELAR</button>
-                    <button type="submit" alt="Processar pagamento e encerrar compra" id="form-submit">FINALIZAR</button>
+                    <button type="submit" alt="Processar pagamento e encerrar compra" id="form-submit">CONTINUAR</button>
                 </div>
             </form>
         </main>
