--- a/src/Comprovante_pagamento.html
+++ b/src/Comprovante_pagamento.html
@@ -4,18 +4,41 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Comprovante de Pagamento</title>
+        <title>Confirmação de pagamento</title>
+        <link rel="stylesheet" href="public/css/confirmacao_pagamento.css">
     </head>
     <body>
-        <h1>Confirmação de Pagamento</h1>
-        <hr>
-        <div>
-            <h3>Informações do Processamento</h3>
-            <p>1 parcela de R$ 500,00</p>
-            <p>Cartão com o final 789 </p>
-        </div>
-        <hr>
-        <button>Cancelar</button>
-        <button>Confirmar</button>
+
+        <main id="main-container">
+            <h1 >Confirmação de pagamento</h1>
+
+            <section id="section-container">
+                <h2 id="title">Dados da compra</h2>
+                <div id="artist-data">
+                    <h3>Tatuador</h3>
+                    <p>José da Silva Alves</p>
+                </div>
+                <div id="art-data">
+                    <h3>Arte</h3>
+                    <p>Tatto tribal costas</p>
+                </div>
+                <div id="img-data">
+                    <img src="./public/images/exemplo1.jpg">
+                </div>
+                <div id="total-data">
+                    <h3>Valor</h3>
+                    <p>1 parcela de R$ 500,00</p>
+                </div>
+                <div id="method-data">
+                    <h3>Forma de pagamento</h3>
+                    <p>Cartão com o final 789 </p>
+                </div>
+            </section>
+
+            <div id="button-container">
+                <button>Cancelar</button>
+                <button>Confirmar</button>
+            </div>
+        </main>
     </body>
 </html>
