--- a/src/Cadastro_tatuagem.html
+++ b/src/Cadastro_tatuagem.html
@@ -58,8 +58,8 @@
             </div>
             
             <div id="button-container">
-                <button type="text">VOLTAR</button>
-                <button type="text" class="submit">CADASTRAR</button>
+                <button type="text"><a href="Perfil_tatuador.html">VOLTAR</a></button>
+                <button type="text" class="submit"><a href="Perfil_tatuador.html">CADASTRAR</a></button>
             </div>
     
         </form>
