--- a/src/Index.html
+++ b/src/Index.html
@@ -81,7 +81,8 @@
     </section>    
     <nav>
         <ul id="ul">
-            <a href="#" class="nav-link"><li>Meu perfil</li></a>
+            <a href="Perfil_cliente.html" class="nav-link"><li>Meu perfil</li></a>
+            <a href="Perfil_tatuador.html" class="nav-link"><li>Tatuador</li></a>
             <a href="#" class="nav-link"><li>Configurações</li></a>
         </ul>
     </nav>
