Removing the button to create new tattoo on client screen

--- a/src/Perfil_cliente.html
+++ b/src/Perfil_cliente.html
@@ -67,7 +67,7 @@
         <nav id="nav-container">
             <ul>
                 <a href="Index.html"><img src="public/images/home.svg" style="color: white;"></a>
-                <a href="Cadastro_tatuagem.html"><img src="public/images/plus.svg"></a>
+                <!-- <a href="Cadastro_tatuagem.html"><img src="public/images/plus.svg"></a> -->
                 <a href="#"><img src="public/images/message.svg"></a>
             </ul>
         </nav>
