--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href=""/>
+    <link rel="icon" href="./Logo PSW sem texto.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"content="Web site created using create-react-app"/>
-    <title>React App</title>
+    <title>Tatuando</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
