--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description"content="Web site created using create-react-app"/>
     <title>Tatuando</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
