--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./Logo PSW sem texto.svg"/>
+    <link rel="icon" href="./assets/images/Logo_PSW_sem_texto"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"content="Web site created using create-react-app"/>
